test/invalid/baseline/union-any.txt
Syntax error at line 1:
typedef (any or any) Any;
             ^ Type `any` cannot be included in a union type
